# gravatar

apiserver/: .env.example  Cargo.toml
apiserver/migrations/: 20250126104752_users.sql  20250127172858_profile.sql
apiserver/src/: main.rs
apiserver/src/dbcalls/: check_user_exists.rs
apiserver/src/helpers/: generate_id.rs  generate_token.rs  mod.rs
apiserver/src/middlewares/: auth_middleware.rs
apiserver/src/models/: profile_model.rs  user_model.rs
apiserver/src/responses/: done_message.rs  mod.rs
apiserver/src/routes/profile/: add_image.rs  fetch_image.rs  get_images.rs  mod.rs  update_profile.rs
apiserver/src/routes/user/: create_user.rs  current_user.rs  login_user.rs
apiserver/src/validation_types/profile/: add_image.rs  mod.rs  update_profile.rs
apiserver/src/validation_types/user/: signup.rs
