[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
serde = {version = "1.0.217", features = ["derive"]}
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std-native-tls"] }
validator = { version = "0.20.0", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
bcrypt = "0.16.0"
md5 = "0.7.0"
bs58 = "0.5.1"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
redis = { version = "0.28.2", features = ["r2d2"] }
r2d2 = "0.8.10"
cloudinary = "0.8.1"
actix-multipart = "0.7.2"
tokio = "1.43.0"
mime = "0.3.17"
